// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET a file Should match snapshot of files in storage 1`] = `
Object {
  "ContentLength": 17252,
  "ContentType": "image/jpeg",
  "ETag": "\\"17252\\"",
  "LastModified": Any<String>,
  "basename": "cache-eviction-delete.jpg",
  "isDirectory": false,
  "path": "/cache-eviction-delete.jpg",
}
`;

exports[`GET a file Should match snapshot of files in storage 2`] = `
Object {
  "ContentLength": 17252,
  "ContentType": "image/jpeg",
  "ETag": "\\"17252\\"",
  "LastModified": Any<String>,
  "basename": "cache-eviction-update.jpg",
  "isDirectory": false,
  "path": "/cache-eviction-update.jpg",
}
`;

exports[`GET a file Should match snapshot of files in storage 3`] = `
Object {
  "ContentLength": 17252,
  "ContentType": "image/jpeg",
  "ETag": "\\"17252\\"",
  "LastModified": Any<String>,
  "basename": "delete.jpg",
  "isDirectory": false,
  "path": "/delete.jpg",
}
`;

exports[`GET a file Should match snapshot of files in storage 4`] = `
Object {
  "ContentLength": 13,
  "ContentType": "application/json",
  "ETag": "\\"13\\"",
  "LastModified": Any<String>,
  "basename": "file.json",
  "isDirectory": false,
  "path": "/file.json",
}
`;

exports[`GET a file Should match snapshot of files in storage 5`] = `
Object {
  "ContentLength": 17252,
  "ContentType": "image/jpeg",
  "ETag": "\\"17252\\"",
  "LastModified": Any<String>,
  "basename": "ice.jpg",
  "isDirectory": false,
  "path": "/ice.jpg",
}
`;

exports[`GET a file Should match snapshot of files in storage 6`] = `
Object {
  "ContentLength": 17252,
  "ContentType": "image/jpeg",
  "ETag": "\\"17252\\"",
  "LastModified": Any<String>,
  "basename": "igloo.jpg",
  "isDirectory": false,
  "path": "/igloo.jpg",
}
`;

exports[`GET a file Should match snapshot of files in storage 7`] = `
Object {
  "ContentLength": 0,
  "ContentType": "application/x-directory",
  "ETag": "\\"0\\"",
  "LastModified": Any<String>,
  "basename": "sub-folder",
  "isDirectory": true,
  "path": "/sub-folder",
}
`;
